SERVER-91406 Allow $match to move ahead of mongoS change stream stages (#23638)

GitOrigin-RevId: 69c12a2458217bb930bff07116551a5a940f616d