src/mongo/db/pipeline/document_source_change_stream_handle_topology_change.h
@@ -66,7 +66,8 @@ namespace mongo {
  */
 class DocumentSourceChangeStreamHandleTopologyChange final : public DocumentSource {
 public:
-    static constexpr StringData kStageName = "$_internalChangeStreamHandleTopologyChange"_sd;
+    static constexpr StringData kStageName =
+        change_stream_constants::stage_names::kHandleTopologyChange;
 
     static boost::intrusive_ptr<DocumentSourceChangeStreamHandleTopologyChange> createFromBson(
         BSONElement elem, const boost::intrusive_ptr<ExpressionContext>& expCtx);
